Make DurationParser Java 8 compatible